--- a/pages/17973.html
+++ b/pages/17973.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      intersecting D-brane models in nLab
+      intersecting D-brane model in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      intersecting D-brane models
+      intersecting D-brane model
   </h1>
 
 
@@ -579,12 +579,22 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#bottomup_and_topdown_approaches'>Bottom-up and Top-down approaches</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>In <a class='existingWikiWord' href='/nlab/show/string+phenomenology'>string phenomenology</a> for <a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type IIA string theory</a> quasi-realistic <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>models</a> are obtained for <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+mechanism'>KK-compactifications</a> with configurations of <a class='existingWikiWord' href='/nlab/show/D6-brane'>D6-branes</a> which fill all of 4d spacetime and intersect in a certain way in the 6-dimensional fiber space. The <a class='existingWikiWord' href='/nlab/show/Chan-Paton+bundle'>Chan-Paton gauge field</a> on the <a class='existingWikiWord' href='/nlab/show/D6-brane'>D6-branes</a> yields the <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge fields</a> in 4d, and the precise intersection pattern determines the effective <a class='existingWikiWord' href='/nlab/show/fundamental+particle'>fundamental particle</a> content in 4d.</p>
 
 <p>See also at <a class='existingWikiWord' href='/nlab/show/string+phenomenology'>string phenomenology</a> the section <em><a href='string+phenomenology#ModelsInTypeIIWithIntersectingBranes'>Models in type II with intersecting branes</a></em>.</p>
+
+<h2 id='bottomup_and_topdown_approaches'>Bottom-up and Top-down approaches</h2>
+
+<p>One distinguishes <a class='existingWikiWord' href='/nlab/show/bottom-up+and+top-down+model+building'>bottom-up and top-down model building</a>] strategies:</p>
+
+<p><img src='https://ncatlab.org/nlab/files/BottomUpAndTopDownIntersDBraneModelBuilding.png' width='800'/></p>
+
+<blockquote>
+<p>snipped grabbed from <a href='#AldazabalIbanezQuevedoUranga00'>Aldazabal-Ibáñez-Quevedo-Uranga 00</a></p>
+</blockquote>
 
 <h2 id='references'>References</h2>
 
@@ -594,30 +604,72 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/Luis+Ib%C3%A1%C3%B1ez'>Luis Ibáñez</a>, <a class='existingWikiWord' href='/nlab/show/%C3%81ngel+Uranga'>Angel Uranga</a>, <em>String Theory and Particle Physics: An Introduction to String Phenomenology</em>, Cambridge</li>
 </ul>
 
+<p>The <a class='existingWikiWord' href='/nlab/show/bottom-up+and+top-down+model+building'>bottom-up approach</a> to intersecting D-brane model building was initiated in</p>
+
+<ul>
+<li id='AldazabalIbanezQuevedoUranga00'>G. Aldazabal, <a class='existingWikiWord' href='/nlab/show/Luis+Ib%C3%A1%C3%B1ez'>Luis Ibáñez</a>, F. Quevedo, <a class='existingWikiWord' href='/nlab/show/%C3%81ngel+Uranga'>Angel Uranga</a>, <em>D-Branes at Singularities : A Bottom-Up Approach to the String Embedding of the Standard Model</em>, JHEP 0008:002 2000 (<a href='http://xxx.lanl.gov/abs/hep-th/0005067'>arXiv:hep-th/0005067</a>)</li>
+</ul>
+
 <p>See also</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Ralph+Blumenhagen'>Ralph Blumenhagen</a>, <a class='existingWikiWord' href='/nlab/show/Mirjam+Cvetic'>Mirjam Cvetic</a>, Paul Langacker, Gary Shiu, <em>Towards Realistic Intersecting D-Brane Models</em>, Ann.Rev.Nucl.Part.Sci.55:71-139, 2005 (<a href='http://arxiv.org/abs/hep-th/0502005'>arXiv:hep-th/0502005</a>)</li>
+<li id='Lust04'>
+<p><a class='existingWikiWord' href='/nlab/show/Dieter+L%C3%BCst'>Dieter Lüst</a>, <em>Intersecting Brane Worlds – A Path to the Standard Model?</em>, Class. Quant. Grav.21 : S1399-1424, 2004 (<a href='http://arxiv.org/abs/hep-th/0401156'>arXiv:hep-th/0401156</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Ralph+Blumenhagen'>Ralph Blumenhagen</a>, <a class='existingWikiWord' href='/nlab/show/Volker+Braun'>Volker Braun</a>, Boris Kors, <a class='existingWikiWord' href='/nlab/show/Dieter+L%C3%BCst'>Dieter Lüst</a>, <em>The Standard Model on the Quintic</em>, Summary of Talks at SUSY02, 1st Intl. Conference on String Phenomenology in Oxford, Strings 2002 and 35th Ahrenshoop Symposium. (<a href='http://arxiv.org/abs/hep-th/0210083'>arXiv:hep-th/0210083</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Ralph+Blumenhagen'>Ralph Blumenhagen</a>, <a class='existingWikiWord' href='/nlab/show/Mirjam+Cvetic'>Mirjam Cvetic</a>, Paul Langacker, Gary Shiu, <em>Towards Realistic Intersecting D-Brane Models</em>, Ann.Rev.Nucl.Part.Sci.55:71-139, 2005 (<a href='http://arxiv.org/abs/hep-th/0502005'>arXiv:hep-th/0502005</a>)</p>
+</li>
+
+<li>
+<p>Ching-Ming Chen, Tianjun Li, Dimitri V. Nanopoulos, <em>Standard-Like Model Building on Type II Orientifolds</em>, Nucl.Phys.B732:224-242,2006 (<a href='http://arxiv.org/abs/hep-th/0509059'>arXiv:hep-th/0509059</a>)</p>
+</li>
+
+<li>
+<p>Ching-Ming Chen, Tianjun Li, V. E. Mayes, Dimitri V. Nanopoulos, <em>A Realistic World from Intersecting D6-Branes</em>, Phys.Lett.B665:267-270, 2008 (<a href='https://arxiv.org/abs/hep-th/0703280'>arXiv:hep-th/0703280</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%C3%81ngel+Uranga'>Angel Uranga</a>, <em>The standard model from D-branes in string theory</em>, talk at Padova, January 2008 (<a href='http://active.pd.infn.it/g4/seminars/2008/files/uranga.pdf'>pdf</a>)</p>
+</li>
+
+<li id='DolanKrippendorfQuevedo11'>
+<p>Matthew J. Dolan, Sven Krippendorf, Fernando Quevedo, <em>Towards a Systematic Construction of Realistic D-brane Models on a del Pezzo Singularity</em>, JHEP 1110 (2011) 024 (<a href='http://arxiv.org/abs/1106.6039'>arXiv:1106.6039</a>)</p>
+</li>
+
+<li>
+<p>Anshuman Maharana, <a class='existingWikiWord' href='/nlab/show/Eran+Palti'>Eran Palti</a>, <em>Models of Particle Physics from Type IIB String Theory and F-theory: A Review</em> (<a href='http://arxiv.org/abs/1212.0555'>arXiv:1212.0555</a>)</p>
+</li>
 </ul>
+
+<p>
+</p>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Created on February  5, 2017 04:14:03 
+  Revised on February 24, 2018 11:56:07 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.229.110.3)
+  (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/intersecting+D-brane+models" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/intersecting+D-brane+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/intersecting+D-brane+model/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/intersecting+D-brane+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/intersecting+D-brane+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/intersecting+D-brane+models" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/intersecting+D-brane+model" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/intersecting+D-brane+models" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/intersecting+D-brane+model" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/intersecting+D-brane+models" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/intersecting+D-brane+model" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
